# kontextrument

./: .gitignore  LICENSE  README.md  generate_spec.py  pyproject.toml
src/: ktr_gui_wx.py  ktr_runner.py
src/ktr/: apply_context.py  create_context.py
src/wxktr_modules/: apply_context_panel.py  create_context_panel.py  project_settings.py  settings_manager.py  task_manager.py  wxbrowse.py  wxgit.py  wxlauncher.py  wxmodmanager.py  wxworkspace.py
src/wxktr_modules/module_ui/: apply_context_panel_view.py  create_context_panel_view.py  git_panel_view.py  workspace_panel_view.py
src/wxktr_modules/modules_parts/: __init__.py  autocomplete.py  diff_viewer.py  editor_core.py  file_tree.py  find_and_replace.py  git_backend.py  image_viewer.py  lexer_themes.py  sound_player.py  wxedit.py  wxterm.py
